bat.bool1.icyhot.IcyHot.scala.error
Erreur de compilation :
IcyHot:5: error: ')' expected but 'return' found.
  return(false)
  ^